# XcelSQL

./: LICENSE  README.md  pyproject.toml  pytest.ini  run_tests.py
tests/: __init__.py  test_cmd_completion.py  test_completion.py  test_core.py  test_sql_params.py
xcelsql/: __init__.py  main.py
xcelsql/cli/: __init__.py  main.py  repl.py
xcelsql/core/: __init__.py  custom_functions.py  errors.py  expr_eval.py  output_writer.py  progress.py  sheet_io.py  sql_engine.py  template_engine.py  transform_core.py
xcelsql/utils/: __init__.py  cache_manager.py  config.py  constants.py  excel_utils.py  logging_setup.py  output_writer.py  profiler.py  string_utils.py  validation.py
