[project]
name = "xcelsql"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb~=1.3.2",
  "pandas~=2.3.1",
  "openpyxl==3.1.5",
]

[project.scripts]
xcelsql = "xcelsql.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Example: add optional uv settings here
# Add dev dependencies with: uv add --dev <package>
dev-dependencies = [
  "pytest",
  "pytest-cov",
]
