[project]
name = "xcelsql"
version = "0.1.0"
# Updated description
description = "SQL-powered Excel transformation engine (DuckDB + pandas) for repeatable spreadsheet transformations"
readme = "README.md"
requires-python = ">=3.10"
# License & authors
license = { file = "LICENSE" }
authors = [
  { name = "Ali Naqvi" }
]
# Keywords (GitHub topic-aligned)
keywords = [
  "excel","sql","duckdb","pandas","data-transformation","etl","spreadsheet","data-engineering","data-pipeline","cli","parquet","analytics","data-cleaning","data-quality","data-automation","templating","expression-evaluator","custom-functions","mapping","schema-mapping","caching","profiling","performance","python","tabular-data","lightweight-etl","repl","workflow-automation"
]
# Classifiers improve discoverability on PyPI (future publish)
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Database :: Front-Ends",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
# Project URLs
urls = {
  "Homepage" = "https://github.com/naqvis/xcelsql",
  "Repository" = "https://github.com/naqvis/xcelsql",
  "Issues" = "https://github.com/naqvis/xcelsql/issues"
}

dependencies = [
  "duckdb~=1.3.2",
  "pandas~=2.3.1",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
# Install with: pip install xcelsql[parquet]
parquet = [
  "pyarrow>=15.0.0,<18.0.0",
  "fastparquet>=2023.8.0",
]
# Extra development tooling (in addition to [tool.uv].dev-dependencies)
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "types-openpyxl",
  "types-python-dateutil",
]

[project.scripts]
xcelsql = "xcelsql.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Dev dependencies managed by uv (mirrors project.optional-dependencies.dev core items)
dev-dependencies = [
  "pytest",
  "pytest-cov",
]
